--- a/triptailor/templates/triptailor/home.html
+++ b/triptailor/templates/triptailor/home.html
@@ -1,24 +1,16 @@
-
-{% extends "triptailor/searchbar-template.html" %}
-{% load static %}
-{% block header %}
-    <style>
-            body {
-                background-image: url("{% static '/triptailor/home_photo1.jpeg' %}");
-                background-size: cover;
-            }
-
-    </style>
-{% endblock header %}
-
-{% block scripts %}
-    {{ block.super }}
-    <script>
-        $('#searchBar').addClass('white');
-        $('nav').removeClass('teal darken-1');
-        $('nav').addClass("transparent z-depth-0");
-        $("#trip_label, #start_date_label, #end_date_label").addClass('black-text');
-        $('.centerSearchBar').addClass('col s12 m6');
-        $('.centerSearchBar').css({"float":"none", "margin":"200px auto","width":"auto","height":"auto"});
-    </script>
-{% endblock scripts %}
+ {% extends "triptailor/searchbar-template.html" %} {% load static %} {% block header %}
+<style>
+    body {
+        background-image: url("{% static '/triptailor/home_photo1.jpeg' %}");
+        background-size: cover;
+    }
+</style>
+{% endblock header %} {% block scripts %} {{ block.super }}
+<script>
+    $('#searchBar').addClass('white');
+    $('nav').removeClass('teal darken-1');
+    $('nav').addClass("transparent z-depth-0");
+    $("#trip_label, #start_date_label, #end_date_label").addClass('black-text');
+    $('.centerSearchBar').addClass('col s12 m6');
+    $('.centerSearchBar').css({ "float": "none", "margin": "200px auto", "width": "auto", "height": "auto" });
+</script> {% endblock scripts %}
