--- a/triptailor/templates/registration/profile.html
+++ b/triptailor/templates/registration/profile.html
@@ -1,4 +1,7 @@
-{% extends 'triptailor/base-template.html' %} {% block header %} {% endblock header %} {% block main %}
+{% extends 'triptailor/base-template.html' %} 
+{% block header %} 
+{% endblock header %} 
+{% block main %}
 <style>
     .cards-container .card {
         column-break-inside: avoid;
