--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -74,7 +74,8 @@
   {% block scripts %}
   <script>
     $('nav').addClass('teal lighten-2')
-  </script> {% endblock scripts %}
+  </script> 
+  {% endblock scripts %}
 
 </body>
 
