Guide Registration, login, log out, profile and permissions

--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -44,7 +44,7 @@
             {% else %}
 
             <li>
-              <a href="#">Become a Tailor</a>
+              <a href="{% url 'guide_register'%}">Guide Space</a>
             </li>
             <li>
               <a href="{% url 'traveler_login'%}">Log in</a>
