Move dashboard views to its own file and start using permission check

--- a/triptailor/templates/triptailor/create-trip.html
+++ b/triptailor/templates/triptailor/create-trip.html
@@ -101,7 +101,7 @@
         }
         //let's post to the server
         $.ajax({
-            url: "{% url 'postTrip' %}",
+            url: "{% url 'post_trip' %}",
             data: data,
             sucess: function (result) {        //callback
                 alert('post successfull');
