--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -20,10 +20,16 @@
 <body>
   <header>
     <div class="navbar-fixed">
-      <ul id="dropdown1" class="dropdown-content">
+      <ul id="dropdown1" class="dropdown-content" style="margin-top:64px;">
         <li>
           <a href="{% url 'profile' %}">Profile</a>
         </li>
+        {% if perms.triptailor.is_guide %}
+        <li class="divider"></li>
+        <li>
+          <a href="{% url 'view_dashboard' %}">Dashboard</a>
+        </li>
+        {% endif %}
         <li class="divider"></li>
         <li>
           <a href="/logout/">Log Out</a>
