--- a/triptailor/templates/triptailor/dashboard.html
+++ b/triptailor/templates/triptailor/dashboard.html
@@ -2,12 +2,62 @@
 {% load static %} 
 {% block header %}
 <style>
-   
+   .waves-effect.waves-light.btn-flat {
+       color: white !important;
+   }
+   .waves-effect.waves-light.btn-flat.right {
+       float: right;
+       margin-right: 0 !important;
+   }
 </style>
 {% endblock header %}
 
 {% block main %}
-<a href="{% url 'create_trip' %}">Create trip</a>
+
+<div class="row" style="margin:auto">
+    <div class="container">
+        <div class="col s12 m10">
+            <h5>Upcoming Trips</h4>
+        </div>
+        <div class="col s12 m2">
+            <a class="waves-effect waves-light btn teal" style="margin-top: 10px;" href="{% url 'create_trip' %}">
+                <i class="material-icons left">add</i>Create Trip
+            </a>
+        </div>
+        {% for trip in upcomingTrips %}
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">{{trip.name}}</span>
+                    <p>{{trip.date}}</p>
+                    <p>{{trip.description}}</p>
+                    <p>Destinations ({{trip.location_count}}): {% for loc in trip.locs %}{{loc.name}}, {% endfor %}</p>
+                </div>
+                <div class="card-action">
+                    <a class="waves-effect waves-light btn-flat teal"><i class="material-icons left">edit</i>Edit Trip</a>
+                    <a class="waves-effect waves-light btn-flat red right"><i class="material-icons left">delete</i>Delete Trip</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        <div class="col s12 m12">
+            <h5>Past Trips</h4>
+        </div>
+        
+        {% for trip in pastTrips %}
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title">{{trip.name}}</span>
+                    <p>{{trip.date}}</p>
+                    <p>{{trip.description}}</p>
+                    <p>Destinations ({{trip.location_count}}): {% for loc in trip.locs %}{{loc.name}}, {% endfor %}</p>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock main %}
 
 {% block scripts %} 
