--- a/triptailor/templates/triptailor/dashboard.html
+++ b/triptailor/templates/triptailor/dashboard.html
@@ -16,11 +16,11 @@
 
 <div class="row" style="margin:auto">
     <div class="container">
-        <div class="col s12 m10">
+        <div class="col s12 m8">
             <h5>Upcoming Trips</h4>
         </div>
-        <div class="col s12 m2">
-            <a class="waves-effect waves-light btn teal" style="margin-top: 10px;" href="{% url 'create_trip' %}">
+        <div class="col s12 m4">
+            <a class="waves-effect waves-light btn teal right" style="margin-top: 10px;" href="{% url 'create_trip' %}">
                 <i class="material-icons left">add</i>Create Trip
             </a>
         </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="card-action">
                     <a class="waves-effect waves-light btn-flat teal"><i class="material-icons left">edit</i>Edit Trip</a>
-                    <a class="waves-effect waves-light btn-flat red right"><i class="material-icons left">delete</i>Delete Trip</a>
+                    <a class="waves-effect waves-light btn-flat red right" onclick="deleteClick({{trip.id}})"><i class="material-icons left">delete</i>Delete Trip</a>
                 </div>
             </div>
         </div>
@@ -58,12 +58,38 @@
         {% endfor %}
     </div>
 </div>
+
+<div id="modal" class="modal" style="max-width: 400px;">
+    <div class="modal-content">
+        <h4>Delete Trip</h4>
+        <p>Are you sure you would like to delete this trip?</p>
+    </div>
+    <div class="modal-footer">
+        <a class="modal-action modal-close waves-effect waves-light btn-flat teal">Cancel</a>
+        <a id="deleteButton" class="modal-action modal-close waves-effect waves-light btn-flat red" style="color: white;"><i class="material-icons left">delete</i>Delete</a>
+    </div>
+</div>
 {% endblock main %}
 
 {% block scripts %} 
-
 {{ block.super }}
 <script>
-   
+    $(document).ready(function(){
+        // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
+        $('.modal').modal({
+            dismissible: true,
+            opacity: .5,
+            inDuration: 300,
+            outDuration: 200,
+            startingTop: '4%',
+            endingTop: '10%',
+        });
+    });
+
+    deleteClick = function(id){
+        {% url 'delete_trip' as delete_url %}
+        $('#deleteButton').attr('href', '{{delete_url}}?id='+id);
+        $('#modal').modal('open');
+    };
 </script> 
 {% endblock scripts %}
