--- a/triptailor/templates/triptailor/search-results.html
+++ b/triptailor/templates/triptailor/search-results.html
@@ -1,7 +1,10 @@
  {% extends "triptailor/searchbar-template.html" %} {% load static %} {% block header %}
 <style>
     body {
-        background-image: url("{% static '/triptailor/home_photo1.jpeg' %}");
+        background: url({% static '/triptailor/home_photo1.jpeg' %}) no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
         background-size: cover;
     }
 </style>
