--- a/triptailor/templates/triptailor/dashboard-create.html
+++ b/triptailor/templates/triptailor/dashboard-create.html
@@ -32,7 +32,7 @@
                                 placeholder="Enter a location" style="width:87%; height:2em; margin-bottom:2px;margin-top:2px;">
                             <ul id="location-list" class="collection" style="margin-left:15px; margin-right:15px;">
                             </ul>
-                            <button id="addLocation" class="waves-effect waves-light btn" style="margin-bottom:10px;">
+                            <button id="addLocation" class="waves-effect waves-light btn">
                                 Add
                             </button>
                             <a href="#" class="waves-effect waves-light btn" onclick="$('.collapsible').collapsible('open',2)">Next Step!</a>
