can view "my trips" from link on profile page

--- a/triptailor/templates/registration/profile.html
+++ b/triptailor/templates/registration/profile.html
@@ -75,7 +75,7 @@
                 <div class="col s12 m7">
                     <div class="card">
                         <div class="card-action">
-                            <a href="#">My Trips</a>
+                            <a href="{% url 'my_trips' %}">My Trips</a>
                         </div>
                     </div>
                 </div>
