--- a/triptailor/templates/triptailor/trips.html
+++ b/triptailor/templates/triptailor/trips.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="#">Trip Details
+                    <a href="#">Trip Details</a>
                 </div>
             </div>
         </div>
