--- a/triptailor/templates/triptailor/trip.html
+++ b/triptailor/templates/triptailor/trip.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="#">Trip Details</a>
+                    <a href="{% url 'trip' trip_id={{ trip.id }} %}">Trip Details</a>
                 </div>
             </div>
         </div>
