Clean up Clean up everybody do your share

--- a/triptailor/templates/triptailor/dashboard.html
+++ b/triptailor/templates/triptailor/dashboard.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="card-action">
                     <a class="waves-effect waves-light btn-flat teal dashboardButton" href="{% url 'view_trip' trip_id=trip.id %}">
-                        <i class="material-icons left">edit</i>
+                        <i class="material-icons left">remove_red_eye</i>
                         View Trip
                     </a>
                     <a class="waves-effect waves-light btn-flat teal dashboardButton" href="{% url 'edit_trip' trip_id=trip.id %}">
