--- a/triptailor/templates/triptailor/myTrips.html
+++ b/triptailor/templates/triptailor/myTrips.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="{% url 'trip' trip_id=trip.id %}">Trip Details</a>
+                    <a href="{% url 'view_trip' trip_id=trip.id %}">Trip Details</a>
                 </div>
             </div>
         </div>
