Fix pages header flashing on page load

--- a/triptailor/templates/triptailor/base-template.html
+++ b/triptailor/templates/triptailor/base-template.html
@@ -35,7 +35,7 @@
           <a href="/logout/">Log Out</a>
         </li>
       </ul>
-      <nav>
+      <nav class="teal lighten-2">
         <div class="nav-wrapper">
           <a href="/" class="brand-logo center waves-effect waves-light">
             <img class="logo" src="{% static 'triptailor/logo.svg' %}" alt="">
@@ -79,7 +79,6 @@
 
   {% block scripts %}
   <script>
-    $('nav').addClass('teal lighten-2')
   </script> 
   {% endblock scripts %}
 
