--- a/triptailor/templates/triptailor/trip.html
+++ b/triptailor/templates/triptailor/trip.html
@@ -127,6 +127,23 @@
 
                 </div>
             </div>
+            <div class="col s12 center" style="padding-bottom: 4vh">
+                <div class="row">
+                    <div class="col s12">
+                        <h4>Spots Remaining</h4>
+                        <span class="red:text center ">Number of spots left : {{ spotsOpen }} </span>
+                    </div>
+                    <div class="col s12">
+                        {% if open %}
+                            <a href="{% url 'purchase' trip_id=trip_id openSpots=spotsOpen %}" class="waves-effect waves-light btn">Let's go on a Trip!</a>
+                        {% else %}
+                            <span class="red-text center">Sorry the trip is no longer avaialble!</span>
+                            <a href="#!" class="waves-effect waves-light btn disabled">Let's go on a Trip!</a>
+                        {% endif %}
+                    </div>
+                </div>
+                    
+            </div>
         </div>
         <div class="row" style="position:relative;">
             <div class="col s12 m4 l3">
